--- a/scrapers/package.json
+++ b/scrapers/package.json
@@ -16,6 +16,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "nodemon": "^3.1.7",
-    "playwright": "^1.48.1"
+    "playwright": "^1.48.1",
+    "yocto-queue": "^1.1.1"
   }
 }
