--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "node-schedule": "^2.1.1",
     "pg": "^8.13.0"
   },
   "devDependencies": {
