--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build-to-backend": "vite build && mkdir -p ../backend/public && cp -r dist/* ../backend/public",
     "lint": "eslint .",
     "preview": "vite preview"
   },
