add basic logging to stdout

--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "express-rate-limit": "^7.4.1",
     "express-validator": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "node-schedule": "^2.1.1",
     "pg": "^8.13.0"
   },
