add an ai service for article summary generation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,3 +10,7 @@ PGPASSWORD="MY_POSTGRES_PASSWORD"
 PGHOST="localhost"
 PGPORT="5432"
 PGDATABASE="MY_POSTGRES_DB"
+
+NODE_ENV="production"
+
+OPENAI_API_KEY="my_openai_api_key"
