--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "node-schedule": "^2.1.1",
+    "openai": "^4.72.0",
     "pg": "^8.13.0"
   },
   "devDependencies": {
